// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given I am on the Amharic Live Radio page When I view the source code in the browser And using AMP I can see the server-rendered HTML 1`] = `
<html lang="am"
      dir="ltr"
      amp
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          name="description"
          content="ዝግጅቶቻችንን’"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="ዝግጅቶቻችንን’"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="am-ET"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="ያድምጡ - BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="website"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/amharic/bbc_amharic_radio/liveradio"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcnews"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="ዝግጅቶቻችንን’"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcnews"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="ያድምጡ - BBC News አማርኛ"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <link rel="preconnect"
          href="https://gel.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://gel.files.bbci.co.uk"
    >
    <link rel="preconnect"
          href="https://ws-downloads.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ws-downloads.files.bbci.co.uk"
    >
    <title data-react-helmet="true">
      ያድምጡ - BBC News አማርኛ
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/amharic/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/amharic/bbc_amharic_radio/liveradio"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/amharic/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            async
            custom-element="amp-bind"
            src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    >
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"RadioChannel","url":"http://localhost:7080/amharic/bbc_amharic_radio/liveradio","publisher":{"@type":"NewsMediaOrganization","name":"BBC News አማርኛ","publishingPrinciples":"https://www.bbc.com/amharic/institutional-49283133","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/amharic/bbc_amharic_radio/liveradio","name":"ያድምጡ"}}
    </script>
    <script data-react-helmet="true"
            async
            custom-element="amp-iframe"
            src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    >
    </script>
    <style amp-boilerplate>
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style amp-boilerplate>
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script async
            src="https://cdn.ampproject.org/v0.js"
    >
    </script>
    <script async
            custom-element="amp-geo"
            src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-consent"
            src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-analytics"
            src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    >
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="AmpConsentWrapper-sc-18egs7-0 bfTTJR">
          <amp-geo layout="nodisplay">
            <script type="application/json">
              {"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"]}}
            </script>
          </amp-geo>
          <amp-consent id="consent"
                       layout="nodisplay"
          >
            <script type="application/json">
              {"consents":{"user-consent":{"promptIfUnknownForGeoGroup":"eea","promptUI":"consent-prompt"}}}
            </script>
            <div id="consent-prompt">
              <div dir="ltr"
                   id="privacy"
                   class="Wrapper-sc-7g3fro-0 crIyKr"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 bTxfUP"
                  >
                    በፕራይቬሲና ኩኪዎችን በመጠቀም ፖሊሲዎቻችን ላይ ማሻሻያ አድርገናል።
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 keksKX"
                  >
                    በፕራይቬሲና ኩኪዎችን በመጠቀም ፖሊሲዎቻችን ላይ ጠቃሚ ለውጦችን አድርገናል። ለርስዎም ሆን በመረጃዎች ላይ ለውጦቹ ምን ማለት እንደሆኑ እንዲያውቁ እንፈልጋለን።
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iOCwEu"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 dguCpL"
                    >
                      <button type="button"
                              on="tap:cookie.show, privacy.hide"
                      >
                        እሺ
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 dguCpL"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
                         on="tap:cookie.show, privacy.hide"
                      >
                        ምን እንደተቀየረ ይመልከቱ
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div dir="ltr"
                   hidden
                   id="cookie"
                   class="Wrapper-sc-7g3fro-0 crIyKr"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 bTxfUP"
                  >
                    ኩኪዎችን መጠቀም ላይ መስማማትዎን ያሳውቁን
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 keksKX"
                  >
                    ለርስዎ
                    <a href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/">
                      የምናቀርበውን አገልግሎት ለማሻሻል በማሰብ ኩኪዎችን
                    </a>
                    እንጠቀማለን። ኩኪዎችን መጠቀም ላይ መስማማትዎን እባክዎ ያሳውቁን.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iOCwEu"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 dguCpL"
                    >
                      <button type="button"
                              on="tap:consent.accept"
                              data-cookie-banner="accept"
                      >
                        እሺ፣ እስማማለሁ
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 dguCpL"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                         on="tap:consent.reject"
                         data-cookie-banner="reject"
                      >
                        ወደ ማውጫ መመለስ እፈልጋለሁ
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </amp-consent>
        </div>
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/amharic"
               class="StyledLink-m3awbo-2 dVRWFA"
            >
              <svg height="24"
                   viewbox="0 0 223.29 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 eHcbpx"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74zM190.23 17.89a8.48 8.48 0 0 0-.79-3.1 5 5 0 0 0-2-2.07l-.11-.06-2.12 5.23h-1.45L187 10h-.16a4.2 4.2 0 0 1-1.74-.36 1.92 1.92 0 0 1-.88-.94 4.27 4.27 0 0 1-.32-1.7V6h1.32v1a3.29 3.29 0 0 0 .18 1.21 1.25 1.25 0 0 0 .57.66 2.89 2.89 0 0 0 1.28.2h1.55l-1 2.56h.1a5.16 5.16 0 0 1 2.59 2.28 10.27 10.27 0 0 1 1.09 4zM199.94 17.89l2.53-6.13h-1.07a2.5 2.5 0 0 1-1.75-.57 2.14 2.14 0 0 1-.65-1.64v-.56l.17-2.08h-1.87v5a6.07 6.07 0 0 1-1.44.93 4.22 4.22 0 0 1-1.76.35 2.74 2.74 0 0 1-2.14-.82 3.5 3.5 0 0 1-.74-2.41 4.16 4.16 0 0 1 .49-2 3.4 3.4 0 0 1 1.41-1.37 4.47 4.47 0 0 1 2.12-.59h6.53c2 0 3 .74 3 2.27a4.58 4.58 0 0 1-.18 1.13 17.59 17.59 0 0 1-.71 2l-2.65 6.5zm-4.65-11a2.69 2.69 0 0 0-2.07.78 3.21 3.21 0 0 0-.72 2.33 2.74 2.74 0 0 0 .44 1.66 1.46 1.46 0 0 0 1.23.6 3.42 3.42 0 0 0 1-.12 2.28 2.28 0 0 0 .79-.42v-4.8zm5.07 1.88v.6a1.35 1.35 0 0 0 .44 1.14 2.53 2.53 0 0 0 1.51.33h.56v-.07c.25-.66.41-1.1.48-1.36a5.81 5.81 0 0 0 .16-.67 3.07 3.07 0 0 0 0-.47 1.3 1.3 0 0 0-.4-1 1.79 1.79 0 0 0-1.11-.35h-1.44zM212.92 19.25a1.13 1.13 0 0 1-.78-.35 2 2 0 0 1-.54-.92v-.08h-1.17a7 7 0 0 1-2.52-.34 2.15 2.15 0 0 1-1.16-1.1 5.52 5.52 0 0 1-.37-2.26V13a14 14 0 0 1 .49-4.13 4 4 0 0 1 1.51-2.18 4.83 4.83 0 0 1 2.75-.7h1.68l.31 2.25h-.19a1.09 1.09 0 0 1-.76-.34 2.14 2.14 0 0 1-.57-.9v-.08h-.45a2.8 2.8 0 0 0-2.61 1.47 9.94 9.94 0 0 0-.81 4.64v1.34a4.17 4.17 0 0 0 .24 1.58 1.52 1.52 0 0 0 .79.81 4.55 4.55 0 0 0 1.74.24h1.12v-.08a2 2 0 0 1 .54-.93 1.12 1.12 0 0 1 .77-.35h.19l-.25 1.77.26 1.84zM218.52 17.89v-3.78h-2.79V13a5 5 0 0 1 .71-2.81 3.4 3.4 0 0 1 2-1.41h.08v-2h-1.92v.08a1.67 1.67 0 0 1-.52.81 1.2 1.2 0 0 1-.79.3h-.19l.25-1.53-.25-1.57h.19a1.2 1.2 0 0 1 .79.3 1.7 1.7 0 0 1 .53.82v.08h5.16v-.08a1.68 1.68 0 0 1 .53-.83 1.22 1.22 0 0 1 .78-.29h.19L223 6.39l.29 1.61h-.19a1.21 1.21 0 0 1-.79-.29 1.68 1.68 0 0 1-.53-.82v-.08h-1.92v1.77h1.49l.31 2.25h-.19a1.09 1.09 0 0 1-.76-.34 2.14 2.14 0 0 1-.55-.94v-.08h-.42a2.36 2.36 0 0 0-1.95.87 3.91 3.91 0 0 0-.69 2.47v.38h2.79v4.69z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                አማርኛ
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 cVAqlL"
            >
              ወደ ዋናው ይዘት ይለፉ
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             id="si-nav"
             class="StyledNav-sc-158x7z5-5 jTxPjl"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <amp-state id="menuState">
              <script type="application/json">
                {"expanded":false}
              </script>
            </amp-state>
            <button type="button"
                    aria-expanded="false"
                    data-amp-bind-aria-expanded="menuState.expanded ? &quot;true&quot; : &quot;false&quot;"
                    on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
                    dir="ltr"
                    class="MenuButton-ukxuly-6 gAGcRq"
            >
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   data-amp-bind-hidden="menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                </path>
              </svg>
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   hidden
                   data-amp-bind-hidden="!menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                >
                </path>
              </svg>
              <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                ክፍሎች
              </span>
            </button>
            <div id="si-nav-dropdown-menu"
                 hidden
                 class="AmpDropdown-ukxuly-1 dMLYwY"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/amharic"
                     class="StyledDropdownLink-ukxuly-4 hVdNGG"
                  >
                    ዜና
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/amharic/topics/e986aff5-6b26-4638-b468-371d1d9617b4"
                     class="StyledDropdownLink-ukxuly-4 hVdNGG"
                  >
                    ኢትዮጵያ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/amharic/media/video"
                     class="StyledDropdownLink-ukxuly-4 hVdNGG"
                  >
                    ቪዲዮ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/amharic/popular/read"
                     class="StyledDropdownLink-ukxuly-4 hVdNGG"
                  >
                    በጣም የተወደዱ
                  </a>
                </li>
              </ul>
            </div>
            <div dir="ltr"
                 id="si-nav-scrollable"
                 class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz StyledAmpScrollableNavigation-thcau0-0 eHufvQ"
            >
              <ul role="list"
                  class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
              >
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/amharic"
                     class="StyledLink-sc-158x7z5-2 dGwkJs"
                  >
                    ዜና
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/amharic/topics/e986aff5-6b26-4638-b468-371d1d9617b4"
                     class="StyledLink-sc-158x7z5-2 dGwkJs"
                  >
                    ኢትዮጵያ
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/amharic/media/video"
                     class="StyledLink-sc-158x7z5-2 dGwkJs"
                  >
                    ቪዲዮ
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/amharic/popular/read"
                     class="StyledLink-sc-158x7z5-2 dGwkJs"
                  >
                    በጣም የተወደዱ
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <amp-analytics>
        <script type="application/json">
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"base":"https://logws1363.ati-host.net?","pageview":"\${base}s=598343&s2=4&p=amharic.bbc_amharic_radio.liveradio.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:ares::ws_live:bbc_amharic_radio]&x2=[amp]&x3=[news-amharic]&x4=[am]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-live]&x8=[simorgh]&x9=[ያድምጡ+-+BBC+News+አማርኛ]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <amp-analytics type="chartbeat">
        <script type="application/json">
          {"vars":{"domain":"test.bbc.co.uk","sections":"Amharic, Amharic - , Amharic - unknown, Amharic - unknown, Amharic - unknown","uid":50924,"title":"ያድምጡ","virtualReferrer":"\${documentReferrer}","contentType":"Live Radio"}}
        </script>
      </amp-analytics>
      <main role="main"
            dir="ltr"
            class="GridComponent-nf79gm-0 iakllL GelPageGrid-ylca1m-0 StyledGelPageGrid-sc-1539sby-0 fIPmtH"
      >
        <div dir="ltr"
             class="GridComponent-nf79gm-0 kMhoTR"
        >
          <h1 id="content"
              tabindex="-1"
              class="Headline-sc-1kh1qhu-0 cWPJOi"
          >
            ያድምጡ
          </h1>
          <p class="Paragraph-k859h4-0 cnKvCl">
            ዝግጅቶቻችንን’
          </p>
          <div class="OuterWrapper-sc-14jc12g-0 jqXnEt">
            <div class="InnerWrapper-sc-14jc12g-1 jOkzyC">
              <div class="StyledAudioContainer-sc-13p1a4d-1 fmBvXq">
                <amp-iframe sandbox="allow-scripts allow-same-origin"
                            layout="fill"
                            scrolling="no"
                            frameborder="0"
                            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_amharic_radio/liveradio/am/amp"
                            title="Audio player"
                            allowfullscreen="allowfullscreen"
                >
                  <amp-img layout="fill"
                           src="http://localhost:7080/images/amp_audio_placeholder.png"
                           placeholder="true"
                           alt
                           height="16"
                           width="9"
                           attribution
                  >
                  </amp-img>
                  <noscript>
                    <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                      <img alt
                           src="http://localhost:7080/images/amp_audio_placeholder.png"
                           aria-hidden="true"
                           class="StyledImg-sc-7vx2mr-0 hIxkbt"
                      >
                      <div class="MessageWrapper-sc-1pnftlt-1 CXSTp">
                        <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                          This audio cannot play in your browser. Please enable JavaScript or try a different browser.
                        </strong>
                      </div>
                    </div>
                  </noscript>
                </amp-iframe>
              </div>
            </div>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/amharic"
               class="StyledLink-m3awbo-2 dVRWFA"
            >
              <svg height="24"
                   viewbox="0 0 223.29 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 eHcbpx"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74zM190.23 17.89a8.48 8.48 0 0 0-.79-3.1 5 5 0 0 0-2-2.07l-.11-.06-2.12 5.23h-1.45L187 10h-.16a4.2 4.2 0 0 1-1.74-.36 1.92 1.92 0 0 1-.88-.94 4.27 4.27 0 0 1-.32-1.7V6h1.32v1a3.29 3.29 0 0 0 .18 1.21 1.25 1.25 0 0 0 .57.66 2.89 2.89 0 0 0 1.28.2h1.55l-1 2.56h.1a5.16 5.16 0 0 1 2.59 2.28 10.27 10.27 0 0 1 1.09 4zM199.94 17.89l2.53-6.13h-1.07a2.5 2.5 0 0 1-1.75-.57 2.14 2.14 0 0 1-.65-1.64v-.56l.17-2.08h-1.87v5a6.07 6.07 0 0 1-1.44.93 4.22 4.22 0 0 1-1.76.35 2.74 2.74 0 0 1-2.14-.82 3.5 3.5 0 0 1-.74-2.41 4.16 4.16 0 0 1 .49-2 3.4 3.4 0 0 1 1.41-1.37 4.47 4.47 0 0 1 2.12-.59h6.53c2 0 3 .74 3 2.27a4.58 4.58 0 0 1-.18 1.13 17.59 17.59 0 0 1-.71 2l-2.65 6.5zm-4.65-11a2.69 2.69 0 0 0-2.07.78 3.21 3.21 0 0 0-.72 2.33 2.74 2.74 0 0 0 .44 1.66 1.46 1.46 0 0 0 1.23.6 3.42 3.42 0 0 0 1-.12 2.28 2.28 0 0 0 .79-.42v-4.8zm5.07 1.88v.6a1.35 1.35 0 0 0 .44 1.14 2.53 2.53 0 0 0 1.51.33h.56v-.07c.25-.66.41-1.1.48-1.36a5.81 5.81 0 0 0 .16-.67 3.07 3.07 0 0 0 0-.47 1.3 1.3 0 0 0-.4-1 1.79 1.79 0 0 0-1.11-.35h-1.44zM212.92 19.25a1.13 1.13 0 0 1-.78-.35 2 2 0 0 1-.54-.92v-.08h-1.17a7 7 0 0 1-2.52-.34 2.15 2.15 0 0 1-1.16-1.1 5.52 5.52 0 0 1-.37-2.26V13a14 14 0 0 1 .49-4.13 4 4 0 0 1 1.51-2.18 4.83 4.83 0 0 1 2.75-.7h1.68l.31 2.25h-.19a1.09 1.09 0 0 1-.76-.34 2.14 2.14 0 0 1-.57-.9v-.08h-.45a2.8 2.8 0 0 0-2.61 1.47 9.94 9.94 0 0 0-.81 4.64v1.34a4.17 4.17 0 0 0 .24 1.58 1.52 1.52 0 0 0 .79.81 4.55 4.55 0 0 0 1.74.24h1.12v-.08a2 2 0 0 1 .54-.93 1.12 1.12 0 0 1 .77-.35h.19l-.25 1.77.26 1.84zM218.52 17.89v-3.78h-2.79V13a5 5 0 0 1 .71-2.81 3.4 3.4 0 0 1 2-1.41h.08v-2h-1.92v.08a1.67 1.67 0 0 1-.52.81 1.2 1.2 0 0 1-.79.3h-.19l.25-1.53-.25-1.57h.19a1.2 1.2 0 0 1 .79.3 1.7 1.7 0 0 1 .53.82v.08h5.16v-.08a1.68 1.68 0 0 1 .53-.83 1.22 1.22 0 0 1 .78-.29h.19L223 6.39l.29 1.61h-.19a1.21 1.21 0 0 1-.79-.29 1.68 1.68 0 0 1-.53-.82v-.08h-1.92v1.77h1.49l.31 2.25h-.19a1.09 1.09 0 0 1-.76-.34 2.14 2.14 0 0 1-.55-.94v-.08h-.42a2.36 2.36 0 0 0-1.95.87 3.91 3.91 0 0 0-.69 2.47v.38h2.79v4.69z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                አማርኛ
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 iXrFjz">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/amharic/institutional-49283133"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ቢቢሲን ለምን ማመን እንደሚገባዎ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/terms/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    የአጠቃቀም ደንብ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/aboutthebbc"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ስለ ቢቢሲ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/privacy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    የፕራይቬሲ ፖሊሲ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ኩኪዎች
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/amharic/institutional-42228117"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ቢቢሲን ያግኙ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. ቢቢሲ ከሌሎች ድረ-ገጾች ለሚመጡ መረጃዎች ሀላፊነት አይወስድም.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  ስለ ውጪ ሊንኮች ያለን አቀራረብ
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`Given I am on the Amharic Live Radio page When I view the source code in the browser And using Canonical I can see the server-rendered HTML 1`] = `
<html lang="am"
      class="no-js"
      dir="ltr"
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          name="description"
          content="ዝግጅቶቻችንን’"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="ዝግጅቶቻችንን’"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="am-ET"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="ያድምጡ - BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="website"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/amharic/bbc_amharic_radio/liveradio"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcnews"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="ዝግጅቶቻችንን’"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News አማርኛ"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcnews"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="ያድምጡ - BBC News አማርኛ"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <link rel="preconnect"
          href="https://gel.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://gel.files.bbci.co.uk"
    >
    <link rel="preconnect"
          href="https://ws-downloads.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ws-downloads.files.bbci.co.uk"
    >
    <title data-react-helmet="true">
      ያድምጡ - BBC News አማርኛ
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/amharic/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/amharic/bbc_amharic_radio/liveradio"
    >
    <link data-react-helmet="true"
          rel="amphtml"
          href="http://localhost:7080/amharic/bbc_amharic_radio/liveradio.amp"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/amharic/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"RadioChannel","url":"http://localhost:7080/amharic/bbc_amharic_radio/liveradio","publisher":{"@type":"NewsMediaOrganization","name":"BBC News አማርኛ","publishingPrinciples":"https://www.bbc.com/amharic/institutional-49283133","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/amharic/bbc_amharic_radio/liveradio","name":"ያድምጡ"}}
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/amharic"
               class="StyledLink-m3awbo-2 dVRWFA"
            >
              <svg height="24"
                   viewbox="0 0 223.29 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 eHcbpx"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74zM190.23 17.89a8.48 8.48 0 0 0-.79-3.1 5 5 0 0 0-2-2.07l-.11-.06-2.12 5.23h-1.45L187 10h-.16a4.2 4.2 0 0 1-1.74-.36 1.92 1.92 0 0 1-.88-.94 4.27 4.27 0 0 1-.32-1.7V6h1.32v1a3.29 3.29 0 0 0 .18 1.21 1.25 1.25 0 0 0 .57.66 2.89 2.89 0 0 0 1.28.2h1.55l-1 2.56h.1a5.16 5.16 0 0 1 2.59 2.28 10.27 10.27 0 0 1 1.09 4zM199.94 17.89l2.53-6.13h-1.07a2.5 2.5 0 0 1-1.75-.57 2.14 2.14 0 0 1-.65-1.64v-.56l.17-2.08h-1.87v5a6.07 6.07 0 0 1-1.44.93 4.22 4.22 0 0 1-1.76.35 2.74 2.74 0 0 1-2.14-.82 3.5 3.5 0 0 1-.74-2.41 4.16 4.16 0 0 1 .49-2 3.4 3.4 0 0 1 1.41-1.37 4.47 4.47 0 0 1 2.12-.59h6.53c2 0 3 .74 3 2.27a4.58 4.58 0 0 1-.18 1.13 17.59 17.59 0 0 1-.71 2l-2.65 6.5zm-4.65-11a2.69 2.69 0 0 0-2.07.78 3.21 3.21 0 0 0-.72 2.33 2.74 2.74 0 0 0 .44 1.66 1.46 1.46 0 0 0 1.23.6 3.42 3.42 0 0 0 1-.12 2.28 2.28 0 0 0 .79-.42v-4.8zm5.07 1.88v.6a1.35 1.35 0 0 0 .44 1.14 2.53 2.53 0 0 0 1.51.33h.56v-.07c.25-.66.41-1.1.48-1.36a5.81 5.81 0 0 0 .16-.67 3.07 3.07 0 0 0 0-.47 1.3 1.3 0 0 0-.4-1 1.79 1.79 0 0 0-1.11-.35h-1.44zM212.92 19.25a1.13 1.13 0 0 1-.78-.35 2 2 0 0 1-.54-.92v-.08h-1.17a7 7 0 0 1-2.52-.34 2.15 2.15 0 0 1-1.16-1.1 5.52 5.52 0 0 1-.37-2.26V13a14 14 0 0 1 .49-4.13 4 4 0 0 1 1.51-2.18 4.83 4.83 0 0 1 2.75-.7h1.68l.31 2.25h-.19a1.09 1.09 0 0 1-.76-.34 2.14 2.14 0 0 1-.57-.9v-.08h-.45a2.8 2.8 0 0 0-2.61 1.47 9.94 9.94 0 0 0-.81 4.64v1.34a4.17 4.17 0 0 0 .24 1.58 1.52 1.52 0 0 0 .79.81 4.55 4.55 0 0 0 1.74.24h1.12v-.08a2 2 0 0 1 .54-.93 1.12 1.12 0 0 1 .77-.35h.19l-.25 1.77.26 1.84zM218.52 17.89v-3.78h-2.79V13a5 5 0 0 1 .71-2.81 3.4 3.4 0 0 1 2-1.41h.08v-2h-1.92v.08a1.67 1.67 0 0 1-.52.81 1.2 1.2 0 0 1-.79.3h-.19l.25-1.53-.25-1.57h.19a1.2 1.2 0 0 1 .79.3 1.7 1.7 0 0 1 .53.82v.08h5.16v-.08a1.68 1.68 0 0 1 .53-.83 1.22 1.22 0 0 1 .78-.29h.19L223 6.39l.29 1.61h-.19a1.21 1.21 0 0 1-.79-.29 1.68 1.68 0 0 1-.53-.82v-.08h-1.92v1.77h1.49l.31 2.25h-.19a1.09 1.09 0 0 1-.76-.34 2.14 2.14 0 0 1-.55-.94v-.08h-.42a2.36 2.36 0 0 0-1.95.87 3.91 3.91 0 0 0-.69 2.47v.38h2.79v4.69z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                አማርኛ
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 cVAqlL"
            >
              ወደ ዋናው ይዘት ይለፉ
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             class="StyledNav-sc-158x7z5-5 dWucaK"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <div class="ScrollableWrapper-t4argr-0 UDeIc">
              <button type="button"
                      aria-expanded="false"
                      dir="ltr"
                      class="MenuButton-ukxuly-6 gAGcRq"
              >
                <svg focusable="false"
                     width="2.75rem"
                     height="2.75rem"
                     viewbox="0 0 44 44"
                     aria-hidden="true"
                     class="MenuIcon-sc-1nq0eki-0 gKIQph"
                >
                  <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                  </path>
                </svg>
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  ክፍሎች
                </span>
              </button>
              <div dir="ltr"
                   class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz"
              >
                <ul role="list"
                    class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
                >
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/amharic"
                       class="StyledLink-sc-158x7z5-2 dGwkJs"
                    >
                      ዜና
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/amharic/topics/e986aff5-6b26-4638-b468-371d1d9617b4"
                       class="StyledLink-sc-158x7z5-2 dGwkJs"
                    >
                      ኢትዮጵያ
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/amharic/media/video"
                       class="StyledLink-sc-158x7z5-2 dGwkJs"
                    >
                      ቪዲዮ
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/amharic/popular/read"
                       class="StyledLink-sc-158x7z5-2 dGwkJs"
                    >
                      በጣም የተወደዱ
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div height="0"
                 class="StyledDropdown-ukxuly-0 NlGZD"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/amharic"
                     class="StyledDropdownLink-ukxuly-4 hVdNGG"
                  >
                    ዜና
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/amharic/topics/e986aff5-6b26-4638-b468-371d1d9617b4"
                     class="StyledDropdownLink-ukxuly-4 hVdNGG"
                  >
                    ኢትዮጵያ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/amharic/media/video"
                     class="StyledDropdownLink-ukxuly-4 hVdNGG"
                  >
                    ቪዲዮ
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/amharic/popular/read"
                     class="StyledDropdownLink-ukxuly-4 hVdNGG"
                  >
                    በጣም የተወደዱ
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <noscript>
        <img height="1px"
             width="1px"
             alt
             style="position:absolute"
             src="https://logws1363.ati-host.net?s=598343&amp;s2=4&amp;p=amharic.bbc_amharic_radio.liveradio.page&amp;x1=[urn:bbc:ares::ws_live:bbc_amharic_radio]&amp;x2=[responsive]&amp;x3=[news-amharic]&amp;x4=[am]&amp;x7=[player-live]&amp;x8=[simorgh-nojs]&amp;x9=[ያድምጡ+-+BBC+News+አማርኛ]"
        >
      </noscript>
      <main role="main"
            dir="ltr"
            class="GridComponent-nf79gm-0 iakllL GelPageGrid-ylca1m-0 StyledGelPageGrid-sc-1539sby-0 fIPmtH"
      >
        <div dir="ltr"
             class="GridComponent-nf79gm-0 kMhoTR"
        >
          <h1 id="content"
              tabindex="-1"
              class="Headline-sc-1kh1qhu-0 cWPJOi"
          >
            ያድምጡ
          </h1>
          <p class="Paragraph-k859h4-0 cnKvCl">
            ዝግጅቶቻችንን’
          </p>
          <div class="OuterWrapper-sc-14jc12g-0 jqXnEt">
            <div class="InnerWrapper-sc-14jc12g-1 jOkzyC">
              <div class="StyledAudioContainer-sc-13p1a4d-1 fmBvXq">
                <iframe src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_amharic_radio/liveradio/am"
                        title="Audio player"
                        allow="autoplay; fullscreen"
                        scrolling="no"
                        allowfullscreen
                        class="StyledIframe-fuo2ed-0 dIyDYU"
                >
                </iframe>
                <noscript>
                  <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                    <div class="MessageWrapper-sc-1pnftlt-1 CXSTp">
                      <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                        This audio cannot play in your browser. Please enable JavaScript or try a different browser.
                      </strong>
                    </div>
                  </div>
                </noscript>
              </div>
            </div>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/amharic"
               class="StyledLink-m3awbo-2 dVRWFA"
            >
              <svg height="24"
                   viewbox="0 0 223.29 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 eHcbpx"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74zM190.23 17.89a8.48 8.48 0 0 0-.79-3.1 5 5 0 0 0-2-2.07l-.11-.06-2.12 5.23h-1.45L187 10h-.16a4.2 4.2 0 0 1-1.74-.36 1.92 1.92 0 0 1-.88-.94 4.27 4.27 0 0 1-.32-1.7V6h1.32v1a3.29 3.29 0 0 0 .18 1.21 1.25 1.25 0 0 0 .57.66 2.89 2.89 0 0 0 1.28.2h1.55l-1 2.56h.1a5.16 5.16 0 0 1 2.59 2.28 10.27 10.27 0 0 1 1.09 4zM199.94 17.89l2.53-6.13h-1.07a2.5 2.5 0 0 1-1.75-.57 2.14 2.14 0 0 1-.65-1.64v-.56l.17-2.08h-1.87v5a6.07 6.07 0 0 1-1.44.93 4.22 4.22 0 0 1-1.76.35 2.74 2.74 0 0 1-2.14-.82 3.5 3.5 0 0 1-.74-2.41 4.16 4.16 0 0 1 .49-2 3.4 3.4 0 0 1 1.41-1.37 4.47 4.47 0 0 1 2.12-.59h6.53c2 0 3 .74 3 2.27a4.58 4.58 0 0 1-.18 1.13 17.59 17.59 0 0 1-.71 2l-2.65 6.5zm-4.65-11a2.69 2.69 0 0 0-2.07.78 3.21 3.21 0 0 0-.72 2.33 2.74 2.74 0 0 0 .44 1.66 1.46 1.46 0 0 0 1.23.6 3.42 3.42 0 0 0 1-.12 2.28 2.28 0 0 0 .79-.42v-4.8zm5.07 1.88v.6a1.35 1.35 0 0 0 .44 1.14 2.53 2.53 0 0 0 1.51.33h.56v-.07c.25-.66.41-1.1.48-1.36a5.81 5.81 0 0 0 .16-.67 3.07 3.07 0 0 0 0-.47 1.3 1.3 0 0 0-.4-1 1.79 1.79 0 0 0-1.11-.35h-1.44zM212.92 19.25a1.13 1.13 0 0 1-.78-.35 2 2 0 0 1-.54-.92v-.08h-1.17a7 7 0 0 1-2.52-.34 2.15 2.15 0 0 1-1.16-1.1 5.52 5.52 0 0 1-.37-2.26V13a14 14 0 0 1 .49-4.13 4 4 0 0 1 1.51-2.18 4.83 4.83 0 0 1 2.75-.7h1.68l.31 2.25h-.19a1.09 1.09 0 0 1-.76-.34 2.14 2.14 0 0 1-.57-.9v-.08h-.45a2.8 2.8 0 0 0-2.61 1.47 9.94 9.94 0 0 0-.81 4.64v1.34a4.17 4.17 0 0 0 .24 1.58 1.52 1.52 0 0 0 .79.81 4.55 4.55 0 0 0 1.74.24h1.12v-.08a2 2 0 0 1 .54-.93 1.12 1.12 0 0 1 .77-.35h.19l-.25 1.77.26 1.84zM218.52 17.89v-3.78h-2.79V13a5 5 0 0 1 .71-2.81 3.4 3.4 0 0 1 2-1.41h.08v-2h-1.92v.08a1.67 1.67 0 0 1-.52.81 1.2 1.2 0 0 1-.79.3h-.19l.25-1.53-.25-1.57h.19a1.2 1.2 0 0 1 .79.3 1.7 1.7 0 0 1 .53.82v.08h5.16v-.08a1.68 1.68 0 0 1 .53-.83 1.22 1.22 0 0 1 .78-.29h.19L223 6.39l.29 1.61h-.19a1.21 1.21 0 0 1-.79-.29 1.68 1.68 0 0 1-.53-.82v-.08h-1.92v1.77h1.49l.31 2.25h-.19a1.09 1.09 0 0 1-.76-.34 2.14 2.14 0 0 1-.55-.94v-.08h-.42a2.36 2.36 0 0 0-1.95.87 3.91 3.91 0 0 0-.69 2.47v.38h2.79v4.69z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                አማርኛ
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 iXrFjz">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/amharic/institutional-49283133"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ቢቢሲን ለምን ማመን እንደሚገባዎ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/terms/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    የአጠቃቀም ደንብ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/aboutthebbc"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ስለ ቢቢሲ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/privacy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    የፕራይቬሲ ፖሊሲ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ኩኪዎች
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/amharic/institutional-42228117"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ቢቢሲን ያግኙ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. ቢቢሲ ከሌሎች ድረ-ገጾች ለሚመጡ መረጃዎች ሀላፊነት አይወስድም.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  ስለ ውጪ ሊንኮች ያለን አቀራረብ
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
    <script>
      window.SIMORGH_DATA={"status":200,"pageData":{"content":{"blocks":[{"text":"ያድምጡ","markupType":"plain_text","type":"heading","uuid":"mock-uuid"},{"text":"ዝግጅቶቻችንን’","type":"paragraph","uuid":"mock-uuid"},{"id":"mock-id","subType":"primary","format":"audio","externalId":"bbc_amharic_radio","duration":"PT0S","caption":"","embedding":false,"available":true,"live":true,"type":"version","uuid":"mock-uuid"}]},"metadata":{"id":"mock-id","locators":{"pipsUrn":"urn:bbc:pips:bbc_amharic_radio"},"type":"WS-LIVE","createdBy":"amharic","language":"am","lastUpdated":0,"firstPublished":0,"lastPublished":0,"options":{},"analyticsLabels":{"pageTitle":"ያድምጡ - BBC News አማርኛ","pageIdentifier":"amharic.bbc_amharic_radio.liveradio.page","producerId":"4","contentType":"player-live","producer":"AMHARIC"},"tags":{},"version":"1.1.2","blockTypes":["heading","version","paragraph"]},"promo":{"name":"ያድምጡ","summary":"ዝግጅቶቻችንን’","uri":"/amharic/bbc_amharic_radio/liveradio","contentType":"WS-LIVE","id":"mock-id","type":"link"},"relatedContent":{"site":{"subType":"simple","name":"amharic","uri":"/amharic","type":"simple"},"groups":[]}},"path":"/amharic/bbc_amharic_radio/liveradio","timeOnServer": "mock-time"}
    </script>
    <div>
      <!--[if !IE]><!-->
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="text/javascript"
            crossorigin="anonymous"
            defer
    >
      [2]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-253ae210.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-0f485567.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-1f20a385.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-678f84af.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-10e2e882.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-d0ae3f07.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-f71cff67.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="amharic"
            src="http://localhost:7080/static/js/amharic-31ecd969.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <div>
    </div>
    <script type="text/javascript">
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
